# mcp-chess-server

./: README.md  pyproject.toml
src/chess/: __init__.py  chess_api.py  server.py
